Some update and fixes

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -20,5 +20,6 @@
     "metrics": "Metrics",
     "open-data": "The Open Data",
     "home": "Home",
-    "terms-of-use": "Terms of use"
+    "terms-of-use": "Terms of use",
+    "tools": "Tools"
 }
